--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<md-toolbar color="primary"> <span>Ristorante Con Fusion</span> </md-toolbar>
+<md-toolbar color="primary"> 
+  <span>Ristorante Con Fusion</span>
+</md-toolbar>
 
-<h1>{{title}}</h1>
+<app-menu></app-menu>
 
